prevent content shifting by scrollbar appearance

--- a/src/index.css
+++ b/src/index.css
@@ -76,10 +76,6 @@ h1, h2 {
   .page {
     width: 50vw;
   }
-/* 
-  summary > h4 {
-    font-size: 80%;
-  } */
 }
 
 @media screen and (max-width: 768px) {    
